--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
+  <link rel="stylesheet" href="result-summary.css">
   
-  <title>Frontend Mentor | Results summary component</title>
+  <title>Results</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
@@ -15,33 +15,39 @@
   </style>
 </head>
 <body>
-
-  Your Result
-  76
-  of 100
-
-  Great
-  You scored higher than 65% of the people who have taken these tests.
-  
-  Summary
-
-  Reaction
-  80 / 100
-
-  Memory
-  92 / 100
-
-  Verbal
-  61 / 100
-
-  Visual
-  72 / 100
-
-  Continue
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+  <main>
+    <div class="result">
+      <div class="left">
+        <div>
+          <h2>Your Result</h2>
+        </div>
+<!--the circle div-->
+        <div class="circle">
+        <p class="score">76</p><p class="interval">of 100</p>
+        </div>
+<!--the circle div-->
+        <div>
+        <h3>Great</h3>
+        <p>You scored higher than 65% of the people who have taken these tests.</p>
+        </div>
+      </div>
+      <div class="right">
+        <h2>Summary</h2>
+        <div class="square red">
+          <span>Reaction</span> <span>80 / 100</span>
+        </div>
+        <div class="square yellow">
+          <span>Memory</span> <span>92 / 100</span>
+        </div>
+        <div class="square green">
+          <span>Verbal</span> <span>61 / 100</span>
+        </div>
+        <div class="square blue">
+          <span>Visual</span> <span>72 / 100</span>
+        </div>
+         <btn>Continue</btn>
+      </div>
+    </div>
+  </main>
 </body>
 </html>
