--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <p class="score">76</p><p class="interval">of 100</p>
         </div>
 <!--the circle div-->
-        <div>
+        <div class="details">
         <h3>Great</h3>
         <p>You scored higher than 65% of the people who have taken these tests.</p>
         </div>
@@ -34,18 +34,20 @@
       <div class="right">
         <h2>Summary</h2>
         <div class="square red">
-          <span>Reaction</span> <span>80 / 100</span>
+          <span><img src="assets/images/icon-reaction.svg">Reaction</span><span class="value">80<span class="maximum">/ 100</span>
         </div>
         <div class="square yellow">
-          <span>Memory</span> <span>92 / 100</span>
+          <span> <img src="assets/images/icon-memory.svg">Memory</span> <span class="value">92<span class="maximum">/ 100</span>
         </div>
         <div class="square green">
-          <span>Verbal</span> <span>61 / 100</span>
+          <span> <img src="assets/images/icon-verbal.svg">Verbal</span> <span class="value">61<span class="maximum">/ 100</span>
         </div>
         <div class="square blue">
-          <span>Visual</span> <span>72 / 100</span>
+          <span> <img src="assets/images/icon-visual.svg">Visual</span> <span class="value">72<span class="maximum">/ 100</span>
         </div>
-         <btn>Continue</btn>
+        <div>
+          <btn>Continue</btn>
+        </div>
       </div>
     </div>
   </main>
